# miss-ocl

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  devices.cpp  example.cpp  matrix_mul.cl
include/missocl/: device.h  environment.h  kernel.h  memory.h  memory_old.h  ocl_syntax.h  opencl.h  utils.h
src/: CMakeLists.txt  device.cpp  environment.cpp  kernel.cpp  opencl.cpp  utils.cpp
